add endpoints + test profiles
