# app/openapi/src/main/resources/open-api.yaml
@@ -89,6 +89,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+    delete:
+      summary: Delete a specific book
+      operationId: deleteBookById
+      tags:
+        - books
+      parameters:
+        - name: bookId
+          in: path
+          required: true
+          description: The id of the book to retrieve
+          schema:
+            type: string
+      responses:
+        '204':
+          description: 'No Content'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 components:
   schemas:
     Book:
